[options.entry_points]
console_scripts =
    ward = ward._run:run

[flake8]
# black compatibility
# https://github.com/psf/black/blob/main/docs/guides/using_black_with_other_tools.md#flake8
max-line-length = 120
max-complexity = 10

extend-ignore = E203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py
    tests/resources/**/*.py
per-file-ignores =
  # WPS421: it is possible to have prints in scripts
  ward/collect.py: C901

statistics = True
show_source = True
count = True
